# python-euler

./: .gitignore  README.md  pyproject.toml
py_euler/: one_hundred_twelve.py  thirteen.py  twenty_two.py
test/unit/: test_one_hundred_twelve.py  test_thirteen.py  test_twenty_two.py
