[tool.poetry]
name = "py_euler"
version = "0.1.0"
description = ""
authors = ["Brian Grant"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest-watch = "^4.2.0"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
